# TalkToMeKit

./: .gitignore  AGENTS.md  Package.resolved  Package.swift  README.md  ROADMAP.md
.github/workflows/: swift-ci.yml
Plugins/StagePythonRuntimePlugin/: plugin.swift
Sources/TTMCli/: CLIClient.swift  CLICommands.swift  CLIModels.swift  CLISynthesisSupport.swift  TTMCli.swift  TTMCliMain.swift
Sources/TTMOpenAPI/: openapi-generator-config.yaml  openapi.yaml
Sources/TTMPythonBridge/: TTMPythonBridge.swift
Sources/TTMPythonRuntimeBundle/: TTMPythonRuntimeBundle.swift
Sources/TTMServer/: TTMApi.swift  TTMApiCore.swift  TTMApiHealthAndAdapters.swift  TTMApiModelHandlers.swift  TTMApiSynthesisHandlers.swift  TTMQwenServing.swift  TTMServer.swift
Sources/TTMService/: CPythonRuntime.swift  TTMPythonBridge.swift  TTMPythonTypes.swift  TTMQwenService.swift  TTMService.swift
Sources/TTMStagePythonRuntimeTool/: TTMStagePythonRuntimeTool.swift  main.swift
Tests/TTMCliTests/: TTMCliTests.swift
Tests/TTMServerArtifactIntegrationTests/: ServerArtifactAudioMetricsTests.swift  ServerArtifactBackendDtypeTests.swift  ServerArtifactSmokeTests.swift  ServerArtifactStagingTests.swift
Tests/TTMServerTests/: StabilitySmokeIntegrationTests.swift  StagingScriptIntegrationTests.swift  TTMApiTests.swift  TTMServerEnvironmentTests.swift
Tests/TTMServiceTests/: QwenModelIdentifierTests.swift  (+2 more)
docs/: refactor-plan.md
scripts/: bridge_integrates_isolated.sh  requirements-qwen.txt  search_repo.sh  stability_smoke.sh  stage_python_runtime.sh
scripts/python-runtime/: pyproject.toml
(+5 files in other folders)
