[project]
name = "talktomekit-python-runtime"
version = "0.1.0"
description = "Locked Python runtime dependencies for TalkToMeKit staging"
requires-python = "==3.11.*"
dependencies = [
  "qwen-tts==0.1.1",
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "huggingface_hub[cli]==0.36.2",
  "static-sox==1.0.2",
]
